# OmniSIFT

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
evaluation/: README.md  inference.py
evaluation/dailyomni/: data.jsonl
evaluation/omnivideobench/: data.jsonl
evaluation/video_salmonn/: data.jsonl
evaluation/videomme/: data.jsonl
evaluation/worldsense/: data.jsonl
omnisift/: __init__.py  compression_units.py  modeling_qwen2_5_omni.py
qwen-omni-utils/src/qwen_omni_utils/v2_5/: vision_process.py
train/: README.md  train.sh
