[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnisift"
version = "0.1.0"
description = "Audio-video token compression utilities for Qwen2.5-Omni."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "OmniSIFT contributors" },
]
keywords = [
    "audio-video",
    "token-compression",
    "qwen2.5-omni",
    "multimodal",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "torch",
    "transformers>=4.52.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.setuptools.packages.find]
include = ["omnisift*"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = ["E501", "W605"]
select = ["E", "F", "I", "W"]

